# Medicaid

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/medicaid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-coreml-stubs.cpp  whisper-jni.cpp
app/src/main/java/com/example/medicaid/: MainActivity.kt
app/src/main/java/com/example/medicaid/data/: AudioPlaybackService.kt  AudioProcessor.kt  AudioRecording.kt  AudioRecordingRepository.kt  AudioRecordingService.kt  WhisperModel.kt  WhisperModelDownloadService.kt  WhisperNative.kt  WhisperPreferencesManager.kt  WhisperTranscriptionService.kt
app/src/main/java/com/example/medicaid/ui/: AudioRecordingScreen.kt  AudioRecordingViewModel.kt  RecordingItem.kt
app/src/main/java/com/example/medicaid/ui/components/: ModelSelectionDialog.kt
app/src/main/java/com/example/medicaid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/medicaid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
